fixed_spacing_tech

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,13 @@
 .skills_title {
     position: relative;
     left: 44%;
+    top: 9rem;
     font-size: 50px;
+}
+
+.skill_img {
+    position: relative;
+    top: 10rem;
 }
 
 
@@ -90,6 +96,7 @@
 .skills_text {
     position: relative;
     left: 38%;
+    top: 10rem;
     font-size: 20px;
 
 }
@@ -97,7 +104,7 @@
 .my_skills {
 position: relative;
 width: 100%;
-height: 40rem;
+height: 50rem;
 left: -0.5rem;
 background-color: #d3d3d3;
 opacity: 0.7;
